@@ -2,7 +2,8 @@
 0.0.5.dev0 (in development0)
 ============================
 
-*
+* Added a call to list networks in a virtualization realm, and to
+get the primary network
 
 0.0.4
 =====
